--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,25 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyAujiQmfJ6SMygd1qNoaASmBdndOxZSx3M",
+        authDomain: "townpass-20d9f.firebaseapp.com",
+        databaseURL: "https://townpass-20d9f-default-rtdb.firebaseio.com",
+        projectId: "townpass-20d9f",
+        storageBucket: "townpass-20d9f.appspot.com",
+        messagingSenderId: "728925586157",
+        appId: "1:728925586157:web:767b4f2667da3e716f82e4"
+      };
+    </script>
+    
     <div id="root"></div>
     <!--
       This HTML file is a template.
